--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.92.3",
+    "@types/three": "^0.159.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.159.0",
+    "three-obj-loader": "^1.1.3"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
