--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.92.3",
     "@types/three": "^0.159.0",
+    "aws-amplify": "^6.0.12",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -23,11 +24,16 @@
     "three-obj-loader": "^1.1.3"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.10.2",
+    "@aws-amplify/backend-cli": "^0.9.7",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "aws-cdk": "^2.122.0",
+    "aws-cdk-lib": "^2.122.0",
+    "constructs": "^10.3.0",
+    "typescript": "^5.3.3"
   }
 }
