--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-three/drei": "^9.92.3",
     "@types/three": "^0.159.0",
     "aws-amplify": "^6.0.12",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
