--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
     "react-three-fiber": "^6.0.13",
     "three": "^0.159.0",
     "three-obj-loader": "^1.1.3"
